# etl-pipeline

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .env  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
{{ cookiecutter.repo_name }}/docs/: conf.py  index.rst  src.rst
{{ cookiecutter.repo_name }}/src/: config.py  params.py  pipeline.py
{{ cookiecutter.repo_name }}/src/config/: AzureRootCA1.pem  __init__.py  logging.ini  logging.py  secrets_manager.py
{{ cookiecutter.repo_name }}/src/nodes/: data_gathering.py  data_preparation.py  data_storage.py  data_transform.py  data_viz.py
