[build-system]
requires = ["setuptools >= 69.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py311']
experimental-string-processing = true

[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "0.0.1"
description = "etl project"
authors = ['']

[tool.poetry.dependencies]
python = "^3.11"
sphinx-rtd-theme = "^2.0.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.28"
psycopg2 = "^2.9.9"
azure-core = "^1.30.1"
azure-identity = "^1.15.0"
azure-keyvault-secrets = "^4.8.0"
boto3 = "^1.34.64"
botocore = "^1.34.64"
datetime = "^5.4"
setuptools = "^69.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
pytest-docker = "^1.0.1"
pytest-integration = "^0.2.2"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"
pre-commit = "^2.20.0"
ruff = "^0.3.3"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]
per-file-ignores = { "__init__.py" = ["E402"], "**/{tests,docs,tools}/*" = ["E402"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
